cmake_minimum_required(VERSION 3.10)
project(sDoomPort C)

set(CMAKE_C_STANDARD 90)

include_directories(src)

find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})

add_executable(sDoomPort
        src/am_map.c
        src/am_map.h
        src/d_englsh.h
        src/d_event.h
        src/d_freedm.h
        src/d_french.h
        src/d_items.c
        src/d_items.h
        src/d_main.c
        src/d_main.h
        src/d_net.c
        src/d_net.h
        src/d_player.h
        src/d_textur.h
        src/d_think.h
        src/d_ticcmd.h
        src/doomdata.h
        src/doomdef.h
        src/doomstat.c
        src/doomstat.h
        src/doomtype.h
        src/dstrings.c
        src/dstrings.h
        src/f_finale.c
        src/f_finale.h
        src/f_wipe.c
        src/f_wipe.h
        src/g_game.c
        src/g_game.h
        src/hu_debug.c
        src/hu_debug.h
        src/hu_lib.c
        src/hu_lib.h
        src/hu_stuff.c
        src/hu_stuff.h
        src/i_event.c
        src/i_event.h
        src/i_file.c
        src/i_file.h
        src/i_main.c
        src/i_net.c
        src/i_net.h
        src/i_sound.c
        src/i_sound.h
        src/i_system.c
        src/i_system.h
        src/i_video.c
        src/i_video.h
        src/info.c
        src/info.h
        src/m_argv.c
        src/m_argv.h
        src/m_bbox.c
        src/m_bbox.h
        src/m_cheat.c
        src/m_cheat.h
        src/m_fixed.c
        src/m_fixed.h
        src/m_list.c
        src/m_list.h
        src/m_menu.c
        src/m_menu.h
        src/m_misc.c
        src/m_misc.h
        src/m_random.c
        src/m_random.h
        src/p_ceilng.c
        src/p_doors.c
        src/p_enemy.c
        src/p_floor.c
        src/p_inter.c
        src/p_inter.h
        src/p_lights.c
        src/p_local.h
        src/p_map.c
        src/p_maputl.c
        src/p_mobj.c
        src/p_mobj.h
        src/p_plats.c
        src/p_pspr.c
        src/p_pspr.h
        src/p_saveg.c
        src/p_saveg.h
        src/p_setup.c
        src/p_setup.h
        src/p_sight.c
        src/p_spec.c
        src/p_spec.h
        src/p_switch.c
        src/p_telept.c
        src/p_tick.c
        src/p_tick.h
        src/p_user.c
        src/r_bsp.c
        src/r_bsp.h
        src/r_data.c
        src/r_data.h
        src/r_defs.h
        src/r_draw.c
        src/r_draw.h
        src/r_local.h
        src/r_main.c
        src/r_main.h
        src/r_plane.c
        src/r_plane.h
        src/r_segs.c
        src/r_segs.h
        src/r_sky.c
        src/r_sky.h
        src/r_state.h
        src/r_things.c
        src/r_things.h
        src/s_sound.c
        src/s_sound.h
        src/sounds.c
        src/sounds.h
        src/st_lib.c
        src/st_lib.h
        src/st_stuff.c
        src/st_stuff.h
        src/tables.c
        src/tables.h
        src/v_video.c
        src/v_video.h
        src/w_wad.c
        src/w_wad.h
        src/wi_stuff.c
        src/wi_stuff.h
        src/z_zone.c
        src/z_zone.h)

target_link_libraries(sDoomPort ${SDL2_LIBRARIES})
